# Chislaki

./: .gitignore  CMakeLists.txt
N1/: CMakeLists.txt  N1.cpp
N10/: CMakeLists.txt  N10.cpp
N11/: CMakeLIsts.txt  N11.cpp
N12/: CMakeLists.txt  LocalConfig.cmake  N12.cpp
N13/: CMakeLists.txt  N13.cpp
N14/: CMakeLists.txt  N14.cpp
N15/: CMakeLists.txt  N15.cpp
N16/: CMakeLists.txt  N16.cpp
N2/: CMakeLists.txt  N2.cpp
N3/: CMakeLists.txt  N3.cpp
N4/: CMakeLists.txt  N4.cpp
N5/: CMakeLists.txt  N5.cpp
N6/: CMakeLists.txt  N6.cpp
N7/: CMakeLists.txt  N7.cpp
N8/: CMakeLists.txt  N8.cpp
N9/: CMakeLists.txt  N9.cpp
