cmake_minimum_required (VERSION 3.8)

project ("Chislaki")

add_subdirectory ("N1")
add_subdirectory ("N2")
add_subdirectory ("N3")
add_subdirectory ("N4")
add_subdirectory ("N5")
add_subdirectory ("N6")
add_subdirectory ("N7")
add_subdirectory ("N8")
add_subdirectory ("N9")
add_subdirectory ("N10")
add_subdirectory ("N11")
add_subdirectory ("N12")
add_subdirectory ("N13")
add_subdirectory ("N14")

